update packages and fix bugs related to whitespace

--- a/src/components/input.css
+++ b/src/components/input.css
@@ -1,3 +1,7 @@
+body {
+  color: #fff;
+}
+
 .spinner {
   width: 50px;
   height: 50px;
